# MyScreensaver

./: .gitattributes  .gitignore  CMakeLists.txt  Edw590SCR.rc  Edw590SCR.sln  Edw590SCR.vcproj  GeneralUtils.c  README.md  main.c  unzip.cpp  unzip.h
Utils/: General.c  General.h  unzip.cpp
